# CRTIMK

./: .gitignore  README.md  execution-README.MD  package.json  presentation-diagrams.drawio
contract/: Cargo.toml  README.md  build.sh  helper.sh  testnet-deploy.sh
contract/coordinator/: Cargo.toml  README.MD
contract/coordinator/src/: events.rs  lib.rs
contract/coordinator/src/bounty/: mod.rs
contract/coordinator/src/coordinator/: mod.rs
contract/coordinator/src/node/: mod.rs
contract/coordinator/tests/: coordinator.rs
contract/neardev/: dev-account  dev-account.env
example-dockerfiles/cpu-intensive_calculate-pi/: Dockerfile
example-dockerfiles/nvidia-smi/: Dockerfile
execution-client/: .env  .env.example  .gitignore  Dockerfile  README.MD  config.ts  database.ts  errors.ts  execution.ts  helper.sh  index.ts  logger.ts  package.json  tsconfig.json  types.ts  util.ts  wallaby-config.js
execution-client/tests/: execution-client.test.ts
frontend/: .env.bak  package.json  tsconfig.json  webpack.config.js
frontend/src/: app.tsx  index.html  index.tsx  storage.ts  types.d.ts  util.ts
frontend/src/bounty/: Bounty.tsx  bounty-detail.tsx  bounty-monitor.tsx  create-bounty.tsx  existing-bounty.tsx  update-bounty-modal.tsx  view-solution-modal.tsx
frontend/src/common/: nav-bar.tsx  (+2 more)
playbook/: README.MD  install-client.yaml  install-tools.yaml  install.sh
playbook/files/: default.env.j2  ecosystem.config.js.j2
playbook/tasks/: install-client.yaml  install-docker.yaml  install-nodejs.yaml  install-nvm.yaml  install-system.yaml  source_nvm.yaml
(+8 files in other folders)
